# gh-weather

./: .dockerignore  Cargo.toml  Dockerfile  README.md  cspell.json
.github/workflows/: docker-build.yml  scheduled-run.yml
aws-lambda/: Cargo.toml  README.md
aws-lambda/src/: main.rs
src/: lib.rs  main.rs  weather.rs
