[package]
name = "gh-weather"
version = "0.5.0"
edition = "2021"
authors = ["Sergei Parshukov <codedby@bugman.me>"]
license = "MIT"
repository = "https://github.com/jBugman/weather"
description = "Update your GitHub status with the current weather at your location"
publish = false

[workspace]
members = ["aws-lambda"]

[dependencies]
anyhow = "1.0.70"
dotenvy = "0.15.6"
serde = "1.0.153"
serde_derive = "1.0.153"
serde_json = "1.0.94"
ureq = { version = "2.6.2", features = ["json"] }
