[package]
name = "gh-weather"
version = "0.6.0"
edition = "2021"
authors = ["Sergei Parshukov <codedby@bugman.me>"]
license = "MIT"
repository = "https://github.com/jBugman/weather"
description = "Update your GitHub status with the current weather at your location"
publish = false

[features]
prod = []

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ureq = { version = "2.12", features = ["json"] }
