[package]
name = "gh-weather-aws-lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gh-weather"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
lambda_runtime = "0.7"
serde = "1.0.136"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }

gh-weather = { path = "../" }
