[package]
name = "gh-weather-aws-lambda"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "gh-weather"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
lambda_runtime = "0.9.2"
serde = "1.0.197"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "fmt",
] }

gh-weather = { path = "../" }
