[package]
name = "gh-weather-aws-lambda"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "gh-weather"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
lambda_runtime = "0.13"
serde = "1.0"
tokio = { version = "1.42", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }

gh-weather = { path = "../" }
